BUG plxShow::catName() : appel de la fonction carUrl au lieu de catUrl
BUG plxUtils::makeThumb() : problème si largeur ou hauteur non renseignée
BUG plxUtils::strCut : problème pour couper une chaine de caractère avec l'encodage UTF-8
BUG Session perdue sous Chrome MacOSX
Sécurité: Faille XSS possible sur la récupération de l'adresse ip d'un visiteur
Sécurité: Mauvais contrôle des tokens

## PLUXML 5.1.6 (sortie : 16/04/2012) ##

[+] Administration: Paramètres > Option d'affichage -> option pour afficher le nom des catégories même si elles ne contiennent pas d'article
[+] Administration: Page statiques > Options -> ajout champ pour définir le contenu de la balise <title>
[+] Administration: Catégories > Options -> ajout champ pour définir le contenu de la balise <title>
[+]	Administration: affichage compteur des articles en attente de validation à droite du menu "Articles"
[+]	Administration: compteur des commentaires hors ligne à droite du menu "commentaires" cliquable -> accès direct à la liste des commentaires hors ligne.
[+] Administration: Edition des commentaires -> possibilité de modifier la date/heure des commentaires
[+] Administration: Gestionnaire de médias: ajout du format ogg dans la liste des fichiers autorisés
[+] Administration: Prise en compte du fuseau horaire dans le javascript de l'icone calendrier
[+] Core: réécriture de la gestion des fuseaux horaires
[+] Core: déplacement du hook plxShowPagination
[+] Core: prise en compte de la valeur localhost dans le champ url des pages statiques
[+] Core: ajout du hook IndexBegin
[+] Core: ajout de la classe plxTimezones (fichier class.plx.timezones.php)
[+] plxShow: ajout de la classe css p_current pour la page courante de la pagination
[+] plxShow: ajout de la fonction tagName
[+] plxShow: lastComList ajout paramètre pour filtrer les derniers commentaires sur 1 ou plusieurs catégories
[+] plxShow: ajout de la fonction catUrl, méthode qui retourne l'url d'une catégorie