@@ -8,8 +8,6 @@
  **/
 class plxCapcha {
 
-	private $min = false; # Longueur min du mot
-	private $max = false; # Longueur max du mot
 	private $word = false; # Mot du capcha
 	private $num = false; # Numero de la lettre selectionne
 	private $numletter = false; # Traduction du numero de la lettre
@@ -23,8 +21,6 @@ class plxCapcha {
 	public function __construct() {
 
 		# Initialisation des variables de classe
-		$this->min = 4;
-		$this->max = 6;
 		$this->word = $this->createWord();
 		$this->num = $this->chooseNum();
 		$this->numletter = $this->num2letter();
@@ -33,21 +29,24 @@ class plxCapcha {
 	/**
 	 * Méthode qui génère un mot
 	 *
-	 * @return	string
-	 * @author	Anthony GUÉRIN
+	 * @param	min		longueur mini du mot
+	 * @param	max		longueur maxi du mot
+	 * @return	string	mot composant le capcha
+	 * @author	Anthony GUÉRIN, Stephane F
 	 **/
-	public function createWord() {
+	public function createWord($min=4, $max=6) {
 
 		# On genere une taille compris entre min et max
-		$size = mt_rand($this->min,$this->max);
+		$size = mt_rand($min,$max);
 		# Definition de l'alphabet
 		$alphabet = 'abcdefghijklmnopqrstuvwxyz';
 		$size_a = strlen($alphabet);
 		# On genere un tableau word
+		$word='';
 		for($i = 0; $i < $size; $i++)
-			$word[ $i ] = $alphabet[ mt_rand(0,$size_a-1) ];
-		# On serialise le tableau et on retourne la valeur
-		return implode('',$word);
+			$word .= $alphabet[mt_rand(0,$size_a-1)];
+		# On retourne la valeur
+		return $word;
 	}
 
 	/**
@@ -100,18 +99,18 @@ class plxCapcha {
 	 **/
 	public function q() {
 		# Generation de la question capcha
+		$_SESSION['capcha'] = $this->word[$this->num-1];
 		return sprintf(L_CAPCHA_QUESTION,$this->numletter,$this->word);
 	}
 
 	/**
 	 * Méthode qui retourne la réponse du capcha (sha1)
+	 * DEPRECATED
 	 *
-	 * @return	string
-	 * @author	Anthony GUÉRIN
 	 **/
 	public function r() {
-		# Generation du hash de la reponse
-		return sha1($this->word[$this->num-1]);
+
+		return;
 	}
 
 }
