@@ -18,6 +18,7 @@ BUG plxUtils::strCut : problème pour couper une chaine de caractère avec l'enc
 BUG Session perdue sous Chrome MacOSX
 Sécurité: Faille XSS possible sur la récupération de l'adresse ip d'un visiteur
 Sécurité: Mauvais contrôle des tokens
+Sécurité: Suppression du champ contenant la solution du captcha dans le formulaires des commentaires
 
 ## PLUXML 5.1.6 (sortie : 16/04/2012) ##
 
